[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "progress-api"
authors = [
  { name = "Michael Ekstrand", email = "mdekstrand@drexel.edu" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]
requires-python = ">= 3.10"
readme = "README.md"
license = { file = "LICENSE.md" }
dynamic = ["version", "description"]
dependencies = [
]

[project.optional-dependencies]
dev = [
  "flit >=3.8",
  "ruff",
  "copier",
]
test = [
  "pytest >=7",
]
doc = [
  "sphinx >=4",
  "sphinxext-opengraph >= 0.5",
  "furo",
]

[project.urls]
Homepage = "https://progress-api.lenksit.org"
GitHub = "https://github.com/lenskit/progress-api"

[project.entry-points."progress_api.backend"]
null = "progress_api.backends.null:NullProgressBackend"
tqdm = "progress_api.backends.tqdm:TQDMProgressBackend"
enlighten = "progress_api.backends.enlighten:EnlightenProgressBackend"

# configure build tools
[tool.flit.sdist]
include = ["tests/*"]
exclude = [
  ".github",
]

# need this for the SCM plugins to work
[tool.setuptools.packages.find]
exclude = ["envs"]

# settings for generating conda environments for dev & CI, when needed
[tool.pyproject2conda]
channels = ["conda-forge"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  ".git",
  "__pycache__",
  "docs/conf.py",
  "build",
  "dist",
]
